Fixed vertical alignment of navigation arrows

--- a/react-datepicker.css
+++ b/react-datepicker.css
@@ -23,7 +23,7 @@
   text-align: center;
   cursor: pointer;
   position: absolute;
-  top: 5px;
+  top: 8px;
   width: 0;
   border: 6px solid transparent; }
 
